6501667 ncp/n2cp drivers should not assume a static number of crypto units 6558981 Allow Errata 175 workaround to be fully enabled/disabled 6519970 Niagara crypto providers should recognize maramba specific device compatibility properties PSARC 2007/306 Victoria Falls IO FMA 6539545 Support new VF PIU errors 6556056 DE should consume ereport.io.n2.pec.lwc PSARC 2007/117 Maramba 1u/2u Platform Support 6531673 ON support for vf processor 6491129 psrinfo -pv doesn't report correct chip info on sun4v 6530592 Topo maps for maramba 6551884 Add nxge driver support for Maramba platforms 6560113 nxge driver should send message to console & /var/adm/messages when onboard port0 or 1 is disabled 6569931 Enhance sun4v trapstat to support at least 256 CPUs FWARC 2007/237 Victoria Falls Perf Regs HV API 6562095 Maramba system panics with send_mondo_set timeout while booting 6437543 sun4v NCPU update to 256

--- a/usr/src/pkgdefs/SUNWust2.v/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWust2.v/pkginfo.tmpl
@@ -1,5 +1,5 @@
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # CDDL HEADER START
@@ -28,7 +28,7 @@
 # and package architecture.
 #
 PKG="SUNWust2"
-NAME="UltraSPARC-T2 (Root)"
+NAME="UltraSPARC-T2 family (Root)"
 ARCH="sparc.sun4v"
 VERSION="ONVERS,REV=0.0.0"
 SUNW_PRODNAME="SunOS"
@@ -36,7 +36,7 @@ SUNW_PRODVERS="RELEASE/VERSION"
 SUNW_PKGTYPE="root"
 MAXINST="1000"
 CATEGORY="system"
-DESC="UltraSPARC-T2 core kernel software"
+DESC="UltraSPARC-T2 family core kernel software"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
