6591817 possible problems installing snv_71 with pam.conf and SUNWtsu 6592268 SUNWts* packages are missing depend file or had incorrect depend file in snv_71. 6593274 remove unused CAS scripts from SUNWts* packaging

--- a/usr/src/pkgdefs/SUNWtsg/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWtsg/pkginfo.tmpl
@@ -41,7 +41,7 @@ DESC="Solaris Trusted Extensions, globalzone-only files"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none devallocdefs initd renamenew manifest rbac"
+CLASSES="none devallocdefs renamenew manifest"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
