--- a/usr/src/pkgdefs/SUNWtsr/pkginfo.tmpl
+++ b/usr/src/pkgdefs/SUNWtsr/pkginfo.tmpl
@@ -41,7 +41,7 @@ DESC="Solaris Trusted Extensions, (Root)"
 VENDOR="Sun Microsystems, Inc."
 HOTLINE="Please contact your local service provider"
 EMAIL=""
-CLASSES="none manifest rbac"
+CLASSES="none manifest"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
 SUNW_PKG_ALLZONES="true"
