--- a/usr/src/pkgdefs/SUNWefcr/postinstall.tmpl
+++ b/usr/src/pkgdefs/SUNWefcr/postinstall.tmpl
@@ -1,3 +1,4 @@
+#!/bin/sh
 #
 # CDDL HEADER START
 #
@@ -22,32 +23,28 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# pragma ident	"%Z%%M%	%I%	%E% SMI"
 #
-# This required package information file contains a list of package contents.
-# The 'pkgmk' command uses this file to identify the contents of a package
-# and their location on the development machine when building the package.
-# Can be created via a text editor or through use of the 'pkgproto' command.
 
-#!search <pathname pathname ...>	# where to find pkg objects
-#!include <filename>			# include another 'prototype' file
-#!default <mode> <owner> <group>	# default used if not specified on entry
-#!<param>=<value>			# puts parameter in pkg environment
+#
+# Not all platforms support efcode.
+# Daemon support is based upon finding the
+# "pcicfg.e (PCIe/PCI Config (EFCode Enabled)"
+# module in the modinfo output
+#
+if [ "${BASEDIR}" = "/" ] ; then
+	if [ `/usr/sbin/modinfo | /usr/bin/grep -c pcicfg` != "0" ]; then
+		/usr/sbin/svcadm enable \
+	   	    svc:/platform/`/usr/bin/uname -m`/efdaemon
+	fi
+else
+	cat >> $BASEDIR/var/svc/profile/upgrade <<\_EFCR_UPGRADE_1
+		if [ `/usr/sbin/modinfo | /usr/bin/grep -c pcicfg` != "0" ]; then
+			/usr/sbin/svcadm enable \
+		   	    svc:/platform/`/usr/bin/uname -m`/efdaemon
+		fi
+_EFCR_UPGRADE_1
 
-# packaging files
-i pkginfo
-i copyright
-i depend
-i preremove
-i postinstall
-i i.manifest
-i r.manifest
-#
-# source locations relative to the prototype file
-#
-# SUNWefcr
-#
-d none var 755 root sys
-d none var/svc 755 root sys
-d none var/svc/manifest 755 root sys
-d none var/svc/manifest/platform 755 root sys
+fi
+
+exit 0
